Fix even more weird rendering on mobile

--- a/sass/_prose.scss
+++ b/sass/_prose.scss
@@ -15,6 +15,7 @@
         margin: 2rem 0 0.6rem;
         font-weight: normal;
         line-height: 1.15;
+        overflow-wrap: break-word;
     }
 
     h1 {
